--- a/src/index.css
+++ b/src/index.css
@@ -50,4 +50,23 @@
 {
   margin-top:10%;
 }
+
+@media (max-width: 550px) 
+{
+  .Div3{
+    display: grid;
+    grid-column-gap: 2%;
+    grid-row-gap: 3%;
+    grid-template-columns: 100%;
+  }
+  
+  .Rectangle-2
+  {
+    border:2px;
+    border-color: black;
+    width:100%;
+    margin-top: 4%;
+  }
+}
+
 @import url('https://fonts.googleapis.com/css?family=Muli:400');
